添加机器等级系统